feat: limit birth round when freezing (#19193)
Signed-off-by: Lazar Petrovic <lpetrovic05@gmail.com>
Signed-off-by: Kelly Greco <kelly@swirldslabs.com>
Co-authored-by: Kelly Greco <82919061+poulok@users.noreply.github.com>
Co-authored-by: Kelly Greco <kelly@swirldslabs.com>